# emporiareporter

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: keys.example.json  rates.json  settings.json  tariff.json  token_cache.example.json
emporia_hydro/: __init__.py  __main__.py  billing.py  cli.py  compare.py  cost.py  ingest.py  models.py  rates.py  ratesio.py  report.py  server.py  trends.py  ytd.py
emporia_hydro/assets/: theme.css
emporia_hydro/assets/static/: app.css
emporia_hydro/templates/: base.html  index.html  report.html  ytd.html
scripts/: run.sh  serve-reports.sh
tests/: conftest.py  test_billing.py  test_cli.py  test_compare.py  test_cost.py  test_functional.py  test_ingest.py  test_rates.py  test_ratesio.py  test_report.py  test_server.py  test_trends.py  test_ytd.py
